# grid_video_agent

./: .gitignore  README.md
电网视频生成助手/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  tmp_dreamo_doc.html  tmp_jimeng_doc.html  tmp_jimeng_image_doc.html
电网视频生成助手/app/: __init__.py  main.py
电网视频生成助手/app/api/: deps.py  presenters.py
电网视频生成助手/app/core/: config.py  database.py
电网视频生成助手/app/models/: automation.py  content.py  project.py
电网视频生成助手/app/providers/: base.py  douyin_publisher.py  mock.py  openai_compatible_llm.py  volcengine_image.py  volcengine_tts.py  volcengine_video.py
电网视频生成助手/app/services/: automation_service.py  composer_service.py  ingestion_service.py  project_service.py  storyboard_prompt_engine.py
电网视频生成助手/app/utils/: files.py  media.py  volcengine.py
电网视频生成助手/app/web/: app.js  index.html  styles.css
电网视频生成助手/config/: agent.example.yaml
电网视频生成助手/data/cases/: state_grid_intro_case.json
电网视频生成助手/docs/: architecture.md
电网视频生成助手/frontend/: index.html  package-lock.json  package.json  vite.config.js
电网视频生成助手/grid_video_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
电网视频生成助手/scripts/: bootstrap_aicoding.ps1  build_frontend.ps1  check_env.ps1  run_api_server.ps1  run_automation_job_now.ps1  run_frontend_dev.ps1  run_local_agent.ps1  run_stage1_case.ps1  run_stage1_case.py  run_web_agent.ps1
电网视频生成助手/tests/: helpers.py  test_api_validation.py  test_automation.py  test_console_routes.py  test_fetchers.py  test_orchestration.py  test_pipeline.py  test_project_workflow_routes.py  test_provider_mocks.py
(+49 files in other folders)
